# gimp-plugin-map-saliency

./: .gitignore  .project  README.md  configure.ac
pluginScripts/: Makefile.am  plugin-map-saliency.py
src/: Makefile.am  adaptOpenCV.cpp  gimp-plugin-engine-saliency  innerRender.cpp  innerRender.hpp  main.c  render.c
